--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,8 @@
     </parent>
 
     <properties>
-        <jenkins.version>2.46.3</jenkins.version>
-        <java.level>8</java.level>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <jenkins.version>1.651.3</jenkins.version>
+        <java.level>7</java.level>
     </properties>
 
     <artifactId>additional-metrics</artifactId>
@@ -65,6 +63,20 @@
             <email>chadi.masri@live.com</email>
         </developer>
     </developers>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-aggregator</artifactId>
+            <version>2.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci</groupId>
+            <artifactId>symbol-annotation</artifactId>
+            <version>1.14</version>
+        </dependency>
+    </dependencies>
 
     <scm>
         <connection>scm:git:git://github.com/jenkinsci/additional-metrics-plugin.git</connection>
