--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,7 @@
   ~ SOFTWARE.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -40,7 +38,7 @@
     </properties>
 
     <artifactId>additional-metrics</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>hpi</packaging>
 
     <name>Additional Metrics Plugin</name>
@@ -82,7 +80,8 @@
         <connection>scm:git:git://github.com/jenkinsci/additional-metrics-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/additional-metrics-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/additional-metrics-plugin</url>
-    </scm>
+      <tag>1.0</tag>
+  </scm>
 
     <repositories>
         <repository>
