--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     </properties>
 
     <artifactId>additional-metrics</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
     <packaging>hpi</packaging>
 
     <name>Additional Metrics Plugin</name>
@@ -80,7 +80,7 @@
         <connection>scm:git:git://github.com/jenkinsci/additional-metrics-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/additional-metrics-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/additional-metrics-plugin</url>
-      <tag>HEAD</tag>
+      <tag>1.2</tag>
   </scm>
 
     <repositories>
