--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
   ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
   ~ SOFTWARE.
   -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -30,13 +29,8 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>3.57</version>
+        <version>4.6</version>
     </parent>
-
-    <properties>
-        <jenkins.version>1.651.3</jenkins.version>
-        <java.level>8</java.level>
-    </properties>
 
     <artifactId>additional-metrics</artifactId>
     <version>1.4-SNAPSHOT</version>
@@ -64,23 +58,66 @@
         </developer>
     </developers>
 
+    <properties>
+        <jenkins.version>2.164.3</jenkins.version>
+        <java.level>8</java.level>
+
+        <jenkins.bom.artifact>bom-2.164.x</jenkins.bom.artifact>
+        <jenkins.bom.version>10</jenkins.bom.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.jenkins.tools.bom</groupId>
+                <artifactId>${jenkins.bom.artifact}</artifactId>
+                <version>${jenkins.bom.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
-            <artifactId>workflow-aggregator</artifactId>
-            <version>2.2</version>
+            <artifactId>workflow-api</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-cps</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-job</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-step-api</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-scm-step</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-durable-task-step</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-basic-steps</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>git</artifactId>
-            <version>3.1.0</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jenkins-ci</groupId>
-            <artifactId>symbol-annotation</artifactId>
-            <version>1.14</version>
         </dependency>
     </dependencies>
 
@@ -104,5 +141,24 @@
             <url>https://repo.jenkins-ci.org/public/</url>
         </pluginRepository>
     </pluginRepositories>
+
+    <profiles>
+        <profile>
+            <id>2.235.x</id>
+
+            <activation>
+                <property>
+                    <name>jenkins.version</name>
+                    <value>2.235.3</value>
+                </property>
+            </activation>
+
+            <properties>
+                <jenkins.version>2.235.3</jenkins.version>
+                <jenkins.bom.artifact>bom-2.235.x</jenkins.bom.artifact>
+                <jenkins.bom.version>11</jenkins.bom.version>
+            </properties>
+        </profile>
+    </profiles>
 
 </project>
