Raise requirements to 2.289.3 and JDK 11.

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <!--
   ~ MIT License
   ~
-  ~ Copyright (c) 2020 Chadi El Masri
+  ~ Copyright (c) 2022 Chadi El Masri
   ~
   ~ Permission is hereby granted, free of charge, to any person obtaining a copy
   ~ of this software and associated documentation files (the "Software"), to deal
@@ -29,7 +29,7 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>4.6</version>
+        <version>4.40</version>
     </parent>
 
     <artifactId>additional-metrics</artifactId>
@@ -37,10 +37,6 @@
     <packaging>hpi</packaging>
 
     <name>Additional Metrics Plugin</name>
-    <description>Provides additional metrics for List Views: Success/Failure Rates, Min/Max/Avg run and checkout
-        durations, Success/Failure
-        Time Rates.
-    </description>
     <url>https://wiki.jenkins-ci.org/display/JENKINS/Additional+Metrics+Plugin</url>
 
     <licenses>
@@ -59,11 +55,11 @@
     </developers>
 
     <properties>
-        <jenkins.version>2.164.3</jenkins.version>
-        <java.level>8</java.level>
+        <jenkins.version>2.289.3</jenkins.version>
+        <java.level>11</java.level>
 
-        <jenkins.bom.artifact>bom-2.164.x</jenkins.bom.artifact>
-        <jenkins.bom.version>10</jenkins.bom.version>
+        <jenkins.bom.artifact>bom-2.289.x</jenkins.bom.artifact>
+        <jenkins.bom.version>1342.v729ca_3818e88</jenkins.bom.version>
     </properties>
 
     <dependencyManagement>
@@ -79,6 +75,10 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-annotations</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-api</artifactId>
@@ -144,19 +144,19 @@
 
     <profiles>
         <profile>
-            <id>2.235.x</id>
+            <id>2.332.x</id>
 
             <activation>
                 <property>
                     <name>jenkins.version</name>
-                    <value>2.235.3</value>
+                    <value>2.332.2</value>
                 </property>
             </activation>
 
             <properties>
-                <jenkins.version>2.235.3</jenkins.version>
-                <jenkins.bom.artifact>bom-2.235.x</jenkins.bom.artifact>
-                <jenkins.bom.version>11</jenkins.bom.version>
+                <jenkins.version>2.332.2</jenkins.version>
+                <jenkins.bom.artifact>bom-2.332.x</jenkins.bom.artifact>
+                <jenkins.bom.version>1342.v729ca_3818e88</jenkins.bom.version>
             </properties>
         </profile>
     </profiles>
