--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     </parent>
 
     <artifactId>additional-metrics</artifactId>
-    <version>1.4-SNAPSHOT</version>
+    <version>${revision}${changelist}</version>
     <packaging>hpi</packaging>
 
     <name>Additional Metrics Plugin</name>
@@ -55,6 +55,9 @@
     </developers>
 
     <properties>
+        <revision>1.4</revision>
+        <changelist>-SNAPSHOT</changelist>
+        <gitHubRepo>jenkinsci/additional-metrics-plugin</gitHubRepo>
         <jenkins.version>2.289.3</jenkins.version>
         <java.level>11</java.level>
 
@@ -122,10 +125,10 @@
     </dependencies>
 
     <scm>
-        <connection>scm:git:git://github.com/jenkinsci/additional-metrics-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:jenkinsci/additional-metrics-plugin.git</developerConnection>
-        <url>https://github.com/jenkinsci/additional-metrics-plugin</url>
-        <tag>HEAD</tag>
+        <connection>scm:git:git://github.com/${gitHubRepo}.git</connection>
+        <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
+        <url>https://github.com/${gitHubRepo}</url>
+        <tag>${scmTag}</tag>
     </scm>
 
     <repositories>
