--- a/pom.xml
+++ b/pom.xml
@@ -60,17 +60,14 @@
         <gitHubRepo>jenkinsci/additional-metrics-plugin</gitHubRepo>
         <jenkins.version>2.289.3</jenkins.version>
         <java.level>11</java.level>
-
-        <jenkins.bom.artifact>bom-2.289.x</jenkins.bom.artifact>
-        <jenkins.bom.version>1342.v729ca_3818e88</jenkins.bom.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
-                <artifactId>${jenkins.bom.artifact}</artifactId>
-                <version>${jenkins.bom.version}</version>
+                <artifactId>bom-2.289.x</artifactId>
+                <version>1342.v729ca_3818e88</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -144,24 +141,5 @@
             <url>https://repo.jenkins-ci.org/public/</url>
         </pluginRepository>
     </pluginRepositories>
-
-    <profiles>
-        <profile>
-            <id>2.332.x</id>
-
-            <activation>
-                <property>
-                    <name>jenkins.version</name>
-                    <value>2.332.2</value>
-                </property>
-            </activation>
-
-            <properties>
-                <jenkins.version>2.332.2</jenkins.version>
-                <jenkins.bom.artifact>bom-2.332.x</jenkins.bom.artifact>
-                <jenkins.bom.version>1342.v729ca_3818e88</jenkins.bom.version>
-            </properties>
-        </profile>
-    </profiles>
 
 </project>
