--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     </parent>
 
     <artifactId>additional-metrics</artifactId>
-    <version>${revision}${changelist}</version>
+    <version>${changelist}</version>
     <packaging>hpi</packaging>
 
     <name>Additional Metrics Plugin</name>
@@ -55,8 +55,7 @@
     </developers>
 
     <properties>
-        <revision>1.4</revision>
-        <changelist>-SNAPSHOT</changelist>
+        <changelist>999999-SNAPSHOT</changelist>
         <gitHubRepo>jenkinsci/additional-metrics-plugin</gitHubRepo>
         <jenkins.version>2.289.3</jenkins.version>
         <java.level>11</java.level>
