--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <packaging>hpi</packaging>
 
     <name>Additional Metrics Plugin</name>
-    <url>https://wiki.jenkins-ci.org/display/JENKINS/Additional+Metrics+Plugin</url>
+    <url>https://github.com/jenkinsci/additional-metrics-plugin</url>
 
     <licenses>
         <license>
