--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <packaging>hpi</packaging>
 
     <name>Additional Metrics Plugin</name>
-    <url>https://wiki.jenkins-ci.org/display/JENKINS/Additional+Metrics+Plugin</url>
+    <url>https://github.com/jenkinsci/additional-metrics-plugin</url>
 
     <licenses>
         <license>
@@ -51,6 +51,11 @@
             <id>chadiem</id>
             <name>Chadi El Masri</name>
             <email>chadimsr@gmail.com</email>
+        </developer>
+        <developer>
+            <id>dainerx</id>
+            <name>Oussama Ben Ghorbel</name>
+            <email>d.oussamabenghorbel@gmail.com</email>
         </developer>
     </developers>
 
